--- a/mewmont/Views/HomePage.xaml
+++ b/mewmont/Views/HomePage.xaml
@@ -1,5 +1,77 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="mewmont.HomePage">
     <ContentPage.Content>
+        <StackLayout Padding="10, 0" BackgroundColor="Gray" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+            <!-- Place new controls here -->
+            <Label HorizontalOptions="Center" 
+                   TextColor="White"
+                   FontAttributes="Bold"
+                   FontSize="Large">
+                <Label.Text>
+                    Welcome to Streamr
+                </Label.Text>
+            </Label>
+            
+            <Label Text="Welcome User &#x0A;"
+                   HorizontalOptions="Center" 
+                   TextColor="White"
+                   FontSize="Large"/>
+            
+            <Grid ColumnSpacing="20">
+              <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+              </Grid.RowDefinitions>
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+              </Grid.ColumnDefinitions>
+                   <Label Text="Creating a streaming session where you can stream a video to people you want to share with!"
+                     HorizontalOptions="Center" 
+                     WidthRequest="140"
+                     TextColor="White"
+                     FontSize="Small"
+                     LineBreakMode="WordWrap"
+                     Grid.Row="0" 
+                     Grid.Column="0" />
+                   <Label Text="Join a current streaming session that is hosted by another user with a link that is provided by the host."
+                     HorizontalOptions="Center" 
+                     WidthRequest="140"
+                     TextColor="White"
+                     FontSize="Small"
+                     LineBreakMode="WordWrap"
+                     Grid.Row="0"
+                     Grid.Column="1" />
+                   <Button
+                    Text="Create Stream"
+                    BackgroundColor="Silver"
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    WidthRequest="80"
+                    HeightRequest="1"
+                    HorizontalOptions="Center"/>
+                 <Button
+                    Text="Join Stream"
+                    FontSize="Small"
+                    BackgroundColor="Silver"
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    WidthRequest="80"
+                    HeightRequest="1"
+                    HorizontalOptions="Center"/>
+                 <BoxView  
+                    VerticalOptions="Fill"
+                    HorizontalOptions="CenterAndExpand"
+                    WidthRequest="1"
+                    Grid.Column="0"
+                    Grid.Row="0"
+                    Grid.ColumnSpan="2"
+                    Grid.RowSpan="2"
+                    Color="Black"/>             
+            </Grid>
+            <BoxView BackgroundColor="Black" HeightRequest="1"  HorizontalOptions="FillAndExpand"/>
+            <Button Text="Streaming Settings"/>
+            <Button Text="General Settings" />
+            <Button Text="Help Guide" />
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
