--- a/mewmont/Views/RoomPage.xaml
+++ b/mewmont/Views/RoomPage.xaml
@@ -22,7 +22,7 @@
                        WidthRequest="{Binding MediaWidth}"
                        IsVisible="{Binding VideoPlaceholderVisible}">
                 </Image>
-                <StackLayout Orientation="Horizontal" 
+                <StackLayout Orientation="Horizontal"
                              x:Name="MediaViewerUI"
                              WidthRequest="{Binding MediaWidth}"
                              HeightRequest="{Binding MediaHeight}">
@@ -30,15 +30,27 @@
                     <Button TextColor="{StaticResource TextColor}" Text="PLAY"
                             BackgroundColor="{StaticResource DefaultButtonColor}"
                             BorderRadius="20"
-                            HeightRequest="40" 
+                            HeightRequest="40"
                             WidthRequest="40"
                             VerticalOptions="End"
-                            Pressed="PlayPause_OnClick">
+                            Pressed="PlayPause_OnClick"
+                            Margin="5, 0, 0, 5">
                     </Button>
                     <Slider HorizontalOptions="FillAndExpand"
                             VerticalOptions="End"
-                            x:Name="timeSlider">
+                            x:Name="timeSlider"
+                            Maximum="{Binding TotalDurationSeconds}"
+                            Minimum="0"
+                            Value="{Binding CurrentPositionSeconds, Mode=TwoWay}"
+                            Margin="0, 0, 5, 5"
+                            ValueChanged="MediaTimeChange">
                     </Slider>
+                    <Label HorizontalOptions="End"
+                           VerticalOptions="End"
+                           Text="{Binding TotalDuration}"
+                           TextColor="White"
+                           Margin="0, 0, 5, 5">
+                    </Label>
                 </StackLayout>
             </AbsoluteLayout>
             <!-- Chat Area -->
@@ -89,19 +101,12 @@
                             </Button.FontFamily>
                         </Button>
                         <!-- Room Settings Button-->
-                        <Button TextColor="{StaticResource TextColor}" Text="&#xf0ad;"
+                        <Button TextColor="{StaticResource TextColor}"
                             BackgroundColor="{StaticResource DefaultButtonColor}"
                             BorderRadius="20"
                             HeightRequest="40" 
                             WidthRequest="40"
                             Pressed="SettingsBtn_OnClick">
-                            <Button.FontFamily>
-                                <OnPlatform x:TypeArguments="x:String">
-                                    <On Platform="iOS" Value="Font Awesome 5 Free" />
-                                    <On Platform="Android" Value="fa-regular-400.ttf#Font Awesome 5 Free" />
-                                    <On Platform="UWP" Value="Assets/Fonts/fa-regular-400#Font Awesome 5 Free" />
-                                </OnPlatform>
-                            </Button.FontFamily>
                         </Button>
                         <!-- Chat Mode Button-->
                         <Button TextColor="{StaticResource TextColor}" Text="&#xf086;"
